--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,3 +7,12 @@
     color: rgba(255, 255, 255, 0.719);
 
 }
+.nav-link-class{
+    text-decoration: none;
+    color: white;
+    padding: 3px;
+}
+.nav-bar .cart-btn:hover{
+    background-color: green;
+    /* color: black; */
+}
