--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -1,20 +1,52 @@
 .banner-image {
     margin-top: 5px;
-    height: 600px;
+    height: 650px;
     width: 100%;
     background-image: url('../Images/background-image-veg.jpg');
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    
 }
 
 .image-content {
-    padding: 300px 100px;
-    color: burlywood;
+    /* padding: 300px 100px; */
+    color: rgb(236, 181, 108);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 1px;
-    font-size: 50px;
-}
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    font-style: italic;
 
+}
+.paragraph-style{
+    color: white;
+    font-size: 18px;
+    max-width: 80%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 15px;
+    border-radius: 8px;
+    text-transform:capitalize; /* All letters will be uppercase */
+  letter-spacing: 2px; /* Adds space between letters */
+  font-family: 'Arial', sans-serif; /* Changes font */
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  opacity:0;
+  animation: fadeIn 2s ease-out forwards; 
+}
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px); /* Start with a small translation */
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0); /* End at the original position */
+    }
+  }
 /* veg Image listing */
 .section2 {
     display: flex;
@@ -85,7 +117,68 @@
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
 .cart-btn:hover {
-    background-color: rgb(111, 241, 111); /* Change to desired hover color */
-    transform: scale(1.05); /* Slight zoom effect for the button */
-  }
+    background-color: rgb(111, 241, 111);
+    /* Change to desired hover color */
+    transform: scale(1.05);
+    /* Slight zoom effect for the button */
+}
+
+.table td img {
+    max-width: 80px;
+    height: auto;
+}
+
+
+/* table content */
+.center-div {
+    display: grid;
+    place-items: center;
+    /* This is a shorthand for aligning items both horizontally and vertically */
+}
+
+.btn-delete {
+    padding: 0;
+    border: none;
+    background: none;
+    color:green;
+}
+
+
+/* Banner Section */
+.banner-container {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../Images/background-image-veg.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+}
+
+.banner-container .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    
+   
+}
+
+/* Banner section end */
+
+/* Left section */
+.left-section {
+    width: 600px;
+    align-self: flex-start;
+   
+}
+
+/* Right section */
+.right-section {
+    width: 400px;
+    background-color: white;
+    border-radius: 15px;
+    padding: 40px 0;
+}
