--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -55,13 +55,6 @@
     height: 100vh;
 }
 
-.card-container {
-    width: 300px;
-    border-radius: 15px;
-    box-shadow: 10px 5px 26px rgb(146, 141, 141);
-    overflow: hidden;
-    text-align: center;
-}
 
 .image-container {
     width: 100%;
@@ -167,18 +160,79 @@
 }
 
 /* Banner section end */
-
+/* product view */
+.product-class{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    /* align-items: center; */
+    /* width: 100%;
+    padding: 50px; */
+  }
 /* Left section */
 .left-section {
-    width: 600px;
-    align-self: flex-start;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
    
 }
 
+.card-container {
+    width: 100%;
+    max-width: 500px;
+    object-fit: contain;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  }
+  
+  /* Hover effect for the image */
+  .card-container:hover {
+    transform: scale(1.05);
+  }
 /* Right section */
 .right-section {
-    width: 400px;
-    background-color: white;
-    border-radius: 15px;
-    padding: 40px 0;
+     flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+.right-section h4{
+    margin: 0;
+    font-size: 40px;
+    
+}
+.right-section p{
+    margin: 0;
+    font-size: 18px;
+    letter-spacing: 1px;
+    margin-top: 18px;
+    line-height: 28px;
+}
+.right-section h5{
+    margin: 0;
+    margin-top: 12px;
+}
+.right-section button{
+    color: whitesmoke;
+    background-color: green;
+    font-weight: bold;
+    border: none;
+    padding: 12px 50px;
+    border-radius: 6px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+.cart-image {
+    height: 120px;
+    width: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    object-fit: cover;
+    margin-right: 10px;
+  }
+
+ 
