--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -235,4 +235,87 @@
     margin-right: 10px;
   }
 
- 
+ /* about us */
+
+ .title-style{
+    font-size: 36px;
+  font-weight: bold;
+  color: #4CAF50;
+  text-align: center;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+    
+ }
+ .paragraph-class{
+    font-family: 'Arial', sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.8;
+    color: #333;
+    margin-bottom: 20px;
+    max-width: 900px;
+    padding: 5px;
+    text-align: justify;
+    letter-spacing: 0.5px;
+    background-color: #f9f9f9;
+    border-left: 4px solid #4CAF50;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    transition: all 0.3s ease;
+    margin-left: auto; /* Center the element horizontally */
+    margin-right: auto;
+ }
+
+ .about-us-paragraph:hover {
+    background-color: #e6f7e6; /* Light green on hover for interaction */
+  border-left-color: #388E3C; /* Darker green border on hover */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  }
+
+  /* contact us */
+  .contact-info-container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+  }
+  
+  .contact-info-container h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    color: #388E3C;;
+  }
+  
+  .contact-details {
+    margin-bottom: 30px;
+  }
+  
+  .contact-item {
+    margin-bottom: 15px;
+  }
+  
+  .contact-item h3 {
+    font-size: 1.25rem;
+    color: #388E3C;;
+  }
+  
+  .contact-item p {
+    font-size: 1rem;
+    color: #555;
+  }
+  
+  .map-container {
+    text-align: center;
+  }
+  .map-container h3{
+    color: #388E3C;;
+  }
+  iframe {
+    border-radius: 10px;
+  }
